Refactor: Moved all tests to new "tests" subproject
Added several "api" dependencies to marklogic-spark-api so that these are all available on the compile classpath for the other subprojects.

No changes to the tests themselves.

Code coverage isn't working at all now, presumably for the same issue as before - i.e. Sonar isn't aggregating coverage data from all the subprojects.